<resources>
    <string name="fileprovider_authority" translatable="false">izzdarki.wallpaper.fileprovider</string>
    <string name="cards_images_folder_name" translatable="false">Cards_images/</string>
    <string name="example_card_front_image_file_name" translatable="false">example_card_front_image.jpg</string>
    <string name="example_card_back_image_file_name" translatable="false">example_card_back_image.jpg</string>
    <string name="mahler_card_front_image_file_name" translatable="false">front_mahler_image.jpg</string>
    <string name="hidden_password_dots" translatable="false">\u2022\u2022\u2022\u2022\u2022\u2022\u2022\u2022</string>
    <string name="version_name" translatable="false">2.2.0-alpha.0</string>
    <string name="preferences_theme_key" translatable="false">preferences.theme_key</string>
    <string name="preferences_theme_entry_values_follow_system" translatable="false">0</string>
    <string name="preferences_theme_entry_values_dark" translatable="false">1</string>
    <string name="preferences_theme_entry_values_light" translatable="false">2</string>
    <string-array name="preferences_theme_entry_values">
        <item>@string/preferences_theme_entry_values_follow_system</item>
        <item>@string/preferences_theme_entry_values_dark</item>
        <item>@string/preferences_theme_entry_values_light</item>
    </string-array>
    <string name="preferences_theme_title">Theme</string>
    <string name="preferences_theme_summary">Choose an app theme</string>
    <string name="preferences_theme_entries_follow_system">Follow system</string>
    <string name="preferences_theme_entries_dark">Dark theme</string>
    <string name="preferences_theme_entries_light">Light theme</string>
    <string-array name="preferences_theme_entries">
        <item>@string/preferences_theme_entries_follow_system</item>
        <item>@string/preferences_theme_entries_dark</item>
        <item>@string/preferences_theme_entries_light</item>
    </string-array>
    <string name="preferences_enable_app_password_key" translatable="false">preferences.enable_authentication_key</string>
    <string name="preferences_enable_fingerprint_authentication_key" translatable="false">preferences.enable_fingerprint_authentication_key</string>
    <string name="preferences_enable_app_password_summary">Use an app password to open the app</string>
    <string name="preferences_authentication_warning_key" translatable="false">preferences.authentication_warning</string>
    <string name="preferences_advanced_title">Advanced</string>
    <string name="preferences_prevent_screenshots_key" translatable="false">preferences.prevent_screenshots_key</string>
    <string name="preferences_prevent_screenshots_title">Prevent screenshots</string>
    <string name="preferences_prevent_screenshots_summary">Prevent screenshots and hide the content of the app in the recent apps overview</string>
    <string name="preferences_back_confirm_key" translatable="false">preferences.confirm_back_key</string>
    <string name="preferences_back_confirm_entry_values_new_entry" translatable="false">1</string>
    <string name="preferences_back_confirm_entry_values_crop" translatable="false">2</string>
    <string name="preferences_back_confirm_entry_values_edit_entry" translatable="false">3</string>
    <string-array name="preferences_back_confirm_default">
        <item>@string/preferences_back_confirm_entry_values_new_entry</item>
        <item>@string/preferences_back_confirm_entry_values_crop</item>
        <item>@string/preferences_back_confirm_entry_values_edit_entry</item>
    </string-array>
    <string-array name="preferences_back_confirm_entry_values">
        <item>@string/preferences_back_confirm_entry_values_new_entry</item>
        <item>@string/preferences_back_confirm_entry_values_crop</item>
        <item>@string/preferences_back_confirm_entry_values_edit_entry</item>
    </string-array>
    <string name="preferences_back_confirm_title">Confirm to cancel</string>
    <string name="preferences_back_confirm_summary">Select where you want the be asked for confirmation to cancel</string>
    <string name="preferences_back_confirm_entries_new_entry">When creating a new entry</string>
    <string name="preferences_back_confirm_entries_crop">When cropping an image</string>
    <string name="preferences_back_confirm_entries_edit_entry">When editing an entry</string>
    <string-array name="preferences_back_confirm_entries">
        <item>@string/preferences_back_confirm_entries_new_entry</item>
        <item>@string/preferences_back_confirm_entries_crop</item>
        <item>@string/preferences_back_confirm_entries_edit_entry</item>
    </string-array>
    <string name="preferences_default_values_key" translatable="false">preferences.default_values</string>
    <string name="preferences_default_values_title">Default entry values</string>
    <string name="preferences_default_values_summary">Edit the default values to be used when creating a new entry</string>
    <string name="preferences_default_values_barcode_key" translatable="false">default_values_preferences.barcode_key</string>
    <string name="preferences_default_values_barcode_default" translatable="false">@string/barcode_type_value_qr</string>
    <string-array name="preferences_default_values_barcode_entries">
        <item>@string/barcode_type_value_aztec</item>
        <item>@string/barcode_type_value_data_matrix</item>
        <item>@string/barcode_type_value_pdf_417</item>
        <item>@string/barcode_type_value_qr</item>
        <item>@string/barcode_type_value_codabar</item>
        <item>@string/barcode_type_value_code_39</item>
        <item>@string/barcode_type_value_code_93</item>
        <item>@string/barcode_type_value_code_128</item>
        <item>@string/barcode_type_value_ean_8</item>
        <item>@string/barcode_type_value_ean_13</item>
        <item>@string/barcode_type_value_itf</item>
        <item>@string/barcode_type_value_upc_a</item>
        <item>@string/barcode_type_value_upc_e</item>
    </string-array>
    <string name="preferences_default_values_barcode_title">Barcode</string>
    <string name="preferences_default_values_barcode_summary">Choose which type of barcode should be used by default</string>
    <string name="preferences_default_values_code_text_key" translatable="false">default_values_preferences.code_text_key</string>
    <string name="preferences_default_values_code_text_entry_values_with_text" translatable="false">1</string>
    <string name="preferences_default_values_code_text_entry_values_without_text" translatable="false">0</string>
    <string name="preferences_default_values_code_text_default" translatable="false">@string/preferences_default_values_code_text_entry_values_without_text</string>
    <string-array name="preferences_default_values_code_text_entry_values">
        <item>@string/preferences_default_values_code_text_entry_values_with_text</item>
        <item>@string/preferences_default_values_code_text_entry_values_without_text</item>
    </string-array>
    <string name="preferences_default_values_code_text_title">Barcode as text</string>
    <string name="preferences_default_values_code_text_summary">Choose whether the barcode should be displayed additionally as text by default or not</string>
    <string-array name="preferences_default_values_code_text_entries">
        <item>@string/barcode_show_text_value_true</item>
        <item>@string/barcode_show_text_value_false</item>
    </string-array>
    <string name="preferences_detailed_errors_key" translatable="false">preferences.detailed_errors_key</string>
    <string name="preferences_detailed_errors_title">Detailed error messages</string>
    <string name="preferences_detailed_errors_summary">Display detailed but sometimes cryptic error messages</string>
    <string name="preferences_secret_field_monospace_key" translatable="false">preferences.secret_field_monospace</string>
    <string name="preferences_secret_field_monospace_title">Monospaced font</string>
    <string name="preferences_secret_field_monospace_summary">Display secret fields with a monospaced font</string>
    <string name="preferences_credits">Credits</string>
    <string name="preferences_app_info">App info</string>
    <string name="preferences_author_title">Author</string>
    <string name="preferences_author_name" translatable="false">IzzDarki</string>
    <string name="preferences_email_title">E-mail</string>
    <string name="preferences_email_content" translatable="false">izzdarki.dev@gmail.com</string>
    <string name="preferences_mailto_link" translatable="false">mailto:izzdarki.dev@gmail.com?subject=Wallet</string>
    <string name="preferences_version_key" translatable="false">preferences.version_key</string>
    <string name="preferences_version_title">Version</string>
    <string name="preferences_releases_link" translatable="false">https://github.com/IzzDarki/Wallet/releases</string>
    <string name="preferences_source_code_title">Source code</string>
    <string name="preferences_source_code_summary">Click here to see the app\'s source code on GitHub.</string>
    <string name="preferences_source_code_link" translatable="false">https://github.com/IzzDarki/Wallet</string>
    <string name="preferences_update_log_key" translatable="false">preferences.update_log_key</string>
    <string name="preferences_update_log_title">Update log</string>
    <string name="preferences_update_log_summary">See what changed in recent versions</string>
    <string name="sort">Sort</string>
    <string name="delete">Delete</string>
    <string name="crop_image_menu_lock_card_ratio">Lock Aspect ratio to card format</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="images_and_icons">Images and icons</string>
    <string name="app_icon_title">App icon</string>
    <string name="app_icon_summary">Icon made by Freepik from www.flaticon.com</string>
    <string name="mahler_image_title">Image of Gustav Mahler</string>
    <string name="mahler_image_summary">Emil Orlik, 1902</string>
    <string name="components_title">Components</string>
    <string name="color_picker_library_title">Color picker</string>
    <string name="color_picker_library_summary">Library made by Anton Popov\nFrom Github under MIT License</string>
    <string name="image_crop_library_title">Image Cropping</string>
    <string name="image_crop_library_summary">Library made by ArthurHub\nFrom Github under Apache License 2.0</string>
    <string name="barcode_library_title">Barcode</string>
    <string name="barcode_library_summary">Library by dm77, based on ZXing ("Zebra Crossing")\nFrom Github under Apache License 2.0</string>
    <string name="crop_image_menu_rotate_right">Rotate right</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="sort_by_name">By name</string>
    <string name="sort_by_custom_order">By custom order</string>
    <string name="sort_by_creation_date">By creation date</string>
    <string name="sort_by_alteration_date">By alteration date</string>
    <string name="sort_reverse">Reverse</string>
    <string name="search">Search</string>
    <string name="app_password">App password</string>
    <string name="authenticate">Authenticate</string>
    <string name="enter_your_app_password">Enter your app password</string>
    <string name="forget_app_password_text">If you forget your app password, there is no way to reset it. You cannot access your data without it.</string>
    <string name="new_app_password">New app password</string>
    <string name="new_app_password_repeat">Repeat new app password</string>
    <string name="set_app_password">Set app password</string>
</resources>