<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@id/home_action_bar_delete_selected_item"
        android:title="@string/delete"
        android:icon="@drawable/icon_delete_24dp"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@id/home_action_bar_search"
        android:title="@string/search"
        android:icon="@drawable/icon_search_24dp"
        android:orderInCategory="3"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@id/home_action_bar_sort"
        android:title="@string/sort"
        android:icon="@drawable/icon_sort_24dp"
        android:orderInCategory="4"
        app:showAsAction="ifRoom">

        <!-- this submenu is also in the other home action bar menu files -->
        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@id/home_action_bar_sort_by_name"
                    android:title="@string/sort_by_name"
                    android:icon="@drawable/icon_sort_alphabetically_24dp"/>

                <item
                    android:id="@id/home_action_bar_sort_custom_order"
                    android:title="@string/sort_by_custom_order"
                    android:icon="@drawable/icon_custom_order_24dp"/>

                <item
                    android:id="@id/home_action_bar_sort_by_creation_date"
                    android:title="@string/sort_by_creation_date"
                    android:icon="@drawable/icon_calendar_created_24dp"/>

                <item
                    android:id="@id/home_action_bar_sort_by_alteration_date"
                    android:title="@string/sort_by_alteration_date"
                    android:icon="@drawable/icon_calendar_edited_24dp"/>

            </group>

            <group android:checkableBehavior="all">

                <item
                    android:id="@id/home_action_bar_sort_reverse"
                    android:title="@string/sort_reverse"
                    android:icon="@drawable/icon_sort_reverse_24dp"
                    android:checkable="true"/>

            </group>

        </menu>

    </item>

</menu>