<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"

    tools:context="com.izzdarki.wallet.ui.settings.SetupAppPasswordFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/explanation_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        android:layout_marginBottom="@dimen/activity_vertical_margin"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/new_password_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:breakStrategy="high_quality"
        style="@style/TextAppearance.Material3.BodyLarge"

        tools:text="@string/preferences_enable_app_password_summary"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_password_layout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        android:layout_marginBottom="8dp"

        app:layout_constraintTop_toBottomOf="@id/explanation_text"
        app:layout_constraintBottom_toTopOf="@+id/new_password_repeat_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"

        android:hint="@string/new_app_password"
        app:endIconMode="password_toggle"
        app:passwordToggleEnabled="true"

        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_password_repeat_layout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        android:layout_marginBottom="8dp"

        app:layout_constraintTop_toBottomOf="@id/new_password_layout"
        app:layout_constraintBottom_toTopOf="@+id/set_password_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"

        android:hint="@string/new_app_password_repeat"
        app:endIconMode="password_toggle"
        app:passwordToggleEnabled="true"

        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_password_repeat_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/set_password_button"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        
        app:layout_constraintTop_toBottomOf="@id/new_password_repeat_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:text="@string/set_app_password"/>

</androidx.constraintlayout.widget.ConstraintLayout>