<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:paddingVertical="@dimen/activity_vertical_margin"
    tools:context="com.izzdarki.wallet.ui.authentication.AuthenticationActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/authentication_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/enter_your_app_password"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/authentication_password_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/authentication_detailed_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"

        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"

        app:layout_constraintTop_toBottomOf="@id/authentication_text"
        app:layout_constraintBottom_toTopOf="@+id/authentication_password_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/authentication_password_layout"

        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/app_password"
        app:endIconMode="password_toggle"
        app:passwordToggleEnabled="true"

        app:errorEnabled="true"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/authentication_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/authentication_button"
        style="@style/Widget.Material3.Button.IconButton.Filled"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/activity_vertical_margin"

        android:text="@string/authenticate"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authentication_password_layout" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/forgot_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/forget_app_password_text"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.95"/>

</androidx.constraintlayout.widget.ConstraintLayout>